tools/tests/errors/assert_failure.ki
assert 1 == 2, "one is not two"
